--- a/compose.yaml
+++ b/compose.yaml
@@ -14,7 +14,9 @@ services:
   frontend:
     container_name: frontend
     image: tucacon/voz_frontend
-    build: ./front-end
+    build:
+      context: ./front-end
+      dockerfile: Dockerfile.frontend
     ports:
       - "3000:3000"
     networks:
@@ -32,9 +34,12 @@ services:
       - TZ="Europe/Helsinki"
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
       - N8N_ENCRYPTION_KEY=17b445402c9acd43ad1368b1e052b6b08da7376036dcae1e
-      - N8N_RUNNERS_ENABLED=true
+      - N8N_RUNNERS_ENABLED=false
+      - N8N_DEFAULT_CORS=TRUE
+      - N8N_CORS_ALLOW_ORIGIN="*"
     volumes:
       - n8n_data:/home/node/.n8n
+      - ./n8n_config:/home/node/config
     depends_on:
       - backend
       - frontend
